# controllers/fileProcessController.go
@@ -2,12 +2,18 @@ package controllers
 
 import (
 	"context"
+	"crypto/tls"
+	"fmt"
 	"minha-api/models"
 	"minha-api/repositories"
 	"minha-api/utils"
 	"net/http"
+	"os"
 	"time"
 
+	"github.com/aws/aws-sdk-go-v2/aws"
+	"github.com/aws/aws-sdk-go-v2/config"
+	"github.com/aws/aws-sdk-go-v2/service/s3"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 )
@@ -195,4 +201,81 @@ func (c *FileProcessController) Delete(ctx *gin.Context) {
 		return
 	}
 	ctx.Status(http.StatusNoContent)
+}
+
+// DownloadFile godoc
+// @Summary      Download do arquivo
+// @Description  Realiza o download do arquivo original enviado para o S3
+// @Tags         files
+// @Produce      octet-stream
+// @Param        id   path      string  true  "ID do arquivo"
+// @Success      302  {string}  string  "Redirect para o arquivo no S3"
+// @Failure      400  {object}  map[string]string
+// @Failure      404  {object}  map[string]string
+// @Failure      401  {object}  map[string]string
+// @Router       /files/{id}/download [get]
+// @Security     ApiKeyAuth
+func (c *FileProcessController) DownloadFile(ctx *gin.Context) {
+	id := ctx.Param("id")
+	if _, err := uuid.Parse(id); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "ID inválido"})
+		return
+	}
+	file, err := c.repo.GetByID(id)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": "Arquivo não encontrado"})
+		return
+	}
+	if file.FilePath == "" {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": "Arquivo sem URL de download"})
+		return
+	}
+
+	bucket := os.Getenv("AWS_BUCKET_NAME")
+	key := file.FileName // ajuste se salvar em subpastas
+	endpoint := os.Getenv("AWS_ENDPOINT")
+	region := os.Getenv("AWS_REGION")
+
+	cfg, err := config.LoadDefaultConfig(context.Background(),
+		config.WithRegion(region),
+	)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Erro ao carregar config AWS"})
+		return
+	}
+
+	customResolver := s3.EndpointResolverFunc(func(region string, options s3.EndpointResolverOptions) (aws.Endpoint, error) {
+		return aws.Endpoint{
+			URL:           "https://" + endpoint,
+			SigningRegion: region,
+		}, nil
+	})
+
+	httpClient := &http.Client{
+		Transport: &http.Transport{
+			TLSClientConfig: &tls.Config{InsecureSkipVerify: true},
+		},
+	}
+
+	s3Client := s3.NewFromConfig(cfg, func(o *s3.Options) {
+		o.EndpointResolver = customResolver
+		o.UsePathStyle = true     // Necessário para Wasabi/MinIO
+		o.HTTPClient = httpClient // Ignora verificação de certificado
+	})
+
+	presignClient := s3.NewPresignClient(s3Client)
+	presignInput := &s3.GetObjectInput{
+		Bucket: aws.String(bucket),
+		Key:    aws.String(key),
+	}
+	presignResult, err := presignClient.PresignGetObject(context.Background(), presignInput, func(opts *s3.PresignOptions) {
+		opts.Expires = 15 * time.Minute // Link válido por 15 minutos
+	})
+	if err != nil {
+		fmt.Println("Erro ao gerar URL pré-assinada:", err)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Erro ao gerar link de download"})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{"download_url": presignResult.URL})
 }
